--- a/index.html
+++ b/index.html
@@ -47,36 +47,42 @@
   <div class="container">
     <!-- First row: Left column empty, Right column with item -->
     <div class="row">
-      <div class="col-6">
-      </div>
-      <div class="col-6">
-        <div id="title-field" class="field">
+
+      <div class="col-12 col-md-6">
+      <div id="options-field-div" class="col-12">
+        <div id="options-field" class="field">
         </div>
       </div>
     </div>
+
+  
   
     <!-- Second row: Draggable items and Bottom right -->
-    <div class="row">
+
       <!-- Left column with draggable items -->
-      <div id="options-field-div" class="col-6">
-        <div id="options-field" class="field">
+       <div class="col-12 col-md-6">
+      <div class="col-12">
+        <div id="title-field" class="field">
+          Pavadinimas
         </div>
       </div>
   
       <!-- Right column with bottom-right item -->
-      <div id="answers-field-div" class="col-6">
+      <div id="answers-field-div" class="col-12">
         <div id="answers-field" class="field">
+          Tekstas
         </div>
       </div>
     </div>
-  
+  </div>
+
     <!-- Check answer button -->
     <div class="row">
       <div class="col-12">
         <button id="check-answer-btn" class="btn btn-primary">Check Answer</button>
         <div id="result-message"></div>
       </div>
-    </div>
+
   </div>
 
   <!-- Include Bootstrap JS -->
