--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           window.scrollBy(0, 10); // Scroll down when near bottom
         }
 
-        // Prevent default scrolling behavior
+        // Prevent default behavior of the browser (pull-to-refresh, page scroll, etc.)
         event.preventDefault();
       }
     });
