--- a/index.html
+++ b/index.html
@@ -159,16 +159,25 @@
     // Add touch event listener for scroll behavior on mobile
     let isDragging = false;
     let dragStartY = 0;
+    let touchStartTime = 0;
+    const LONG_PRESS_DELAY = 500; // Delay before enabling drag (in ms)
 
     document.addEventListener('touchstart', function (event) {
       if (event.target.classList.contains('item')) {
         dragStartY = event.touches[0].clientY;
-        isDragging = true;
+        touchStartTime = Date.now();
+        isDragging = false;
         event.preventDefault(); // Prevent initial scrolling
       }
     });
 
     document.addEventListener('touchmove', function (event) {
+      if (!isDragging && Date.now() - touchStartTime >= LONG_PRESS_DELAY) {
+        isDragging = true;
+        event.preventDefault(); // Allow drag to start only after long press
+        document.body.style.overflow = 'hidden'; // Disable body scrolling during drag
+      }
+
       if (isDragging) {
         const dragY = event.touches[0].clientY;
         const screenHeight = window.innerHeight;
@@ -180,13 +189,15 @@
           window.scrollBy(0, 10); // Scroll down when near bottom
         }
 
-        // Prevent default behavior (page refresh, scrolling) until we are near edges
+        // Prevent default behavior (page refresh, scrolling) until drag is initiated
         event.preventDefault();
       }
     });
 
     document.addEventListener('touchend', function () {
-      isDragging = false;
+      if (isDragging) {
+        document.body.style.overflow = ''; // Re-enable body scroll after dragging ends
+      }
     });
 
     // Button event to check the answer
@@ -217,7 +228,6 @@
       const sentencesCorrect = arraysAreEqual(answerList, sentences); // Compare sentences
       resultMessage.textContent = sentencesCorrect ? 'Correct!' : 'Incorrect!';
     });
-
   </script>
 
 </body>
