--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         body {
           font-family: Arial, sans-serif;
           padding: 20px;
+          overscroll-behavior: none;
         }
 
         .field {
