--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           cursor: move;
           border: 1px solid #ccc;
           border-radius: 5px;
+          box-shadow: 0px 0.1px 3px rgba(0, 0, 0, 0.2);
         }
 
         /* Ensure the drop targets fill the column */
@@ -120,7 +121,6 @@
         }
 
         #check-answer-btn {
-          margin-left: 20px;
         }
 
         .btn-primary:focus,
@@ -133,16 +133,12 @@
         }
 
         #next-question-btn {
-          margin-left: 45px;
+          margin-left: 3vw;
         }
 
         #tries,
         #help {
           font-size: 1.25rem;
-        }
-
-        #tracker-div {
-          margin-left: 12px;
         }
 
         .material-symbols-rounded {
@@ -162,6 +158,17 @@
           justify-content: center;
           align-items: center;
           z-index: 3;
+        }
+
+        .error {
+            animation: shake 0.2s ease-in-out 0s 2;
+        }
+
+        @keyframes shake {
+          0% { margin-left: 0rem; }
+          25% { margin-left: 0.5rem; }
+          75% { margin-left: -0.5rem; }
+          100% { margin-left: 0rem; }
         }
 
         @media (max-width: 1150px) {
@@ -452,6 +459,13 @@ document.addEventListener('touchmove', function (event) {
       const titleItems = titleField.querySelectorAll('.item');
       const titleList = Array.from(titleItems).map(item => item.textContent);
 
+      function errorIndicator (field) {
+        field.classList.add('error')
+          var timeoutReference = setTimeout(function() {
+            field.classList.remove('error'); 
+        }, 500);
+        }
+
       function arraysAreEqual(items, arr1, arr2) {
         var answerCorrect = true;
         if (arr1.length !== arr2.length) {
@@ -465,6 +479,9 @@ document.addEventListener('touchmove', function (event) {
           } else {
             items[i].style.backgroundColor = 'rgb(182, 200, 103)'   
           }
+        }
+        if (!answerCorrect) {
+          errorIndicator(answersField);
         }
         return answerCorrect;
       }
@@ -483,8 +500,16 @@ document.addEventListener('touchmove', function (event) {
             items[i].style.backgroundColor = 'rgb(182, 200, 103)'
           }
         }
+        if (!answerCorrect) {
+          errorIndicator(titleField);
+        }
         return answerCorrect;
       }
+
+
+      if (titleAnswer.length === 0 && paragraphAnswerOrder.length === 0) {
+        return
+      } else {
 
       // The correct answer should include the title as the first item, followed by the sentences in order
       const titleIsCorrect = titlesAreEqual(titleItems, titleAnswer, [selectedItem.title]);
@@ -525,6 +550,7 @@ document.addEventListener('touchmove', function (event) {
         tries++;
         triesDiv.innerHTML = `Bandymai: ${tries}`;
       }
+    }
     });
 
     helpBtn.addEventListener('click', function () {
